--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -25,9 +25,8 @@
     <!-- Profile logo. Add a img tag in place of <span>. -->
     <p class="logoPlaceholder"><!-- <img src="logoImage.png" alt="sample logo"> --><span>YIZUZZ</span></p>
   </div>
-  <div class="profilePhoto"> 
-    <!-- Profile photo --> 
-    <img src="AboutPageAssets/images/Imagen2.png" alt="sample"> </div>
+  <div > 
+<img class="profilePhoto" src="AboutPageAssets/images/Imagen2.png" alt="sample"> </div>
   <!-- Identity details -->
   <section class="profileHeader">
     <h1>JESUS DAVD ZAPPA&nbsp; &nbsp; &nbsp;</h1>
