--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -32,7 +32,7 @@
     <h1>JESUS DAVD ZAPPA&nbsp; &nbsp; &nbsp;</h1>
     <h3>REALLY AWESOME WEB DESIGNER</h3>
     <hr>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+    <p>Soy una persona que se apasiona, reinventa y busca soluciones innovadoras. Planteo proyectos laborales y personales que me permiten ejecutar mi campo de acción, me mantengo en constante actualización basado en la investigación para brindar mi máximo potencial</p>
   </section>
   <!-- Links to Social network accounts -->
   <aside class="socialNetworkNavBar">
@@ -71,15 +71,15 @@
     <hr class="sectionTitleRule2">
     <!-- First Title & company details  -->
     <article class="section2Content">
-      <h2 class="sectionContentTitle">AUX Desarrollo y soporte &amp;Offimedicas&nbsp;</h2>
-      <h3 class="sectionContentSubTitle">Position / Date - Year</h3>
-      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
+      <h2 class="sectionContentTitle">Offimedicas&nbsp;</h2>
+      <h3 class="sectionContentSubTitle">Aux Desarrollo y soporte &nbsp;</h3>
+      <p class="sectionContent"> Auxiliar de soporte a sistemas, Brindando acompañamiento en el funcionamiento y recopilando los errores presentados en el mismo. Analista requerimientos para desarrollar nuevas funcionalidades. Implementador de software a clientes nuevos que adquieren el sistema. Elaboración de manuales de usuario del sistema. Auditoría a procesos. </p>
     </article>
     <!-- Second Title & company details  -->
     <article class="section2Content">
-      <h2 class="sectionContentTitle"> Title & Company</h2>
-      <h3 class="sectionContentSubTitle">Position / Date - Year</h3>
-      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
+      <h2 class="sectionContentTitle"> Offimedicas &nbsp;</h2>
+      <h3 class="sectionContentSubTitle">&nbsp;Tester de pruebas funcionales y toma de requerimientos</h3>
+      <p class="sectionContent"> Cuento con la experiencia, un departamento de TI, donde he participado de muchos proyectos con un diverso grupo de desarrolladores en funciones como: soporte de sistemas, Capacitación, documentación e implementación de nuevos software o nuevas funcionalidades; he analista de requerimientos de desarrollo, así pruebas de regresión de manera manual y experiencias de usuario de software y Tester de pruebas funcionales con herramientas de trabajo como Gitlab , ClickUp y Trello bajo la tecnología ágil Scrum y conocimientos de gestión integral de la calidad.</p>
     </article>
     <!-- Replicate the above Div block to add more title and company details --> 
   </section>
